Name: graphics-drawingcombinators
Description:
    This module is a functional wrapper around OpenGL, so you don't
    have to go into the deep, dark world of imperative stateful
    programming just to draw stuff.  It supports 2D only (for now),
    with support drawing geometry, images, and text.
Version: 1.7.1
Stability: experimental
Synopsis: A functional interface to 2D drawing in OpenGL
License: BSD3
Category: Graphics
Author: Luke Palmer
Homepage: http://github.com/luqui/graphics-drawingcombinators
Maintainer: lrpalmer@gmail.com
Build-Type: Simple
Extra-Source-Files: demo/example.hs
cabal-Version: >= 1.8

source-repository head
  type:     git
  location: http://github.com/luqui/graphics-drawingcombinators

Library
    Build-Depends: OpenGL >= 2.9
                 , base == 4.*
                 , bitmap >= 0.0.2
                 , bitmap-opengl >= 0.0.1.5
                 , freetype-gl >= 0.2
                 , stb-image == 0.2.*
                 , text
                 , transformers >= 0.4.2.0
    hs-Source-Dirs: src
    Exposed-Modules: Graphics.DrawingCombinators
                   , Graphics.DrawingCombinators.Color
                   , Graphics.DrawingCombinators.Affine
    Other-Modules:   Graphics.DrawingCombinators.Text
    ghc-options: -Wall
    Ghc-Prof-Options: -fprof-auto

Flag examples
  Description: Build example programs
  Default: False

Executable example
  Main-is:       demo/example.hs
  if !flag(examples)
    Buildable:     False
  else
    Buildable:     True
    Build-depends: base, GLFW-b >=1.4.6 && <1.5, OpenGL, graphics-drawingcombinators, text
    ghc-options:   -Wall
